plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group = 'mc.obliviate'
version = '22.7.0'
sourceCompatibility = 11
compileJava.options.encoding = 'UTF-8'

tasks.jar {
    enabled = false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'com.github.johnrengelman.shadow'

    group = rootProject.group
    version = rootProject.version
    sourceCompatibility = 11
    compileJava.options.encoding = 'UTF-8'

    repositories {
        mavenLocal()
        maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
        maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
        maven { url = 'https://repo.maven.apache.org/maven2/' }
        maven { url = 'https://repo.kryptonmc.org/releases' }
        maven { url = 'https://repo.puha.io/repo/' }
        maven { url = 'https://jitpack.io' }
    }

    artifacts.archives(tasks.shadowJar)

    tasks.jar {
        enabled = true
    }

    tasks.shadowJar {
        archiveFileName.set(project.name + "-" + project.version + ".jar")
    }
}